--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <meta charset="utf-8" />
+     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
