--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2 class="intro">*************<br>
 。<br>
 <br>
-project 1 a family archive <a href="../project-1/index.html">*</a><br>
+<h2>project 1 a family archive <a href="../project-1/index.html">*</a><br>
 project 2 "what are the missing parts?"<a href="../project-2/index.html">*</a><br>
 <br></h2>
 <br>
