--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 。<br>
 <br>
 project 1 a family archive <a href="../project-1/index.html">*</a><br>
-project 2 "what are the missing parts?"<a href="../project-2/index.html">*</a><br>
+project 2 "what are the missing parts?"<a href="../project-2/3.html">*</a><br>
 <br></h2>
 <br>
   <h3 class="ex"><br>
