--- a/index.html
+++ b/index.html
@@ -15,21 +15,25 @@
 </head>
 <body>
 
-    <p>Qianxue Zhao</p>
+    <div class="code0"><p>Qianxue Zhao</p></class>
     <h2>*************<br>
-。<br>
 <br>
-project 1 a family archive <a href="../project-1/index.html">*</a><br>
-project 2 "what are the missing parts?"<a href="../project-2/3.html">*</a><br>
+
+<div class="code">project 1 a family archive <a href="../project-1/index.html">*</a><br></div>
+<br>
+<div class="code2">project 2 "what are the missing parts?"<a href="../project-2/3.html">*</a><br></div>
 <br></h2>
 <br>
-  <h3 class="ex"><br>
-    exercise 1 <a href="#">*</a><br>
-exercise 2 <a href="../lettercomposition/index.html">*</a><br> </h3>
+
+
+<h3 class="ex"><br>
+<div class="code4">exercise 1 <a href="#">*</a><br></div>
+
+<div class="code5">exercise 2 <a href="../lettercomposition/type.html">*</a><br></h3></div>
 <br>
 <br>
-<h1>If you have any questions please send me an email <br>
-qzhao01@ <a href="#"></a>. </h1>
+<div class="code3"><h1>If you have any questions please send me an email <br>
+to qzhao01@ <a href="#"></a>. </h1></div>
 
 
 
