--- a/index.html
+++ b/index.html
@@ -4,33 +4,31 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <meta charset="utf-8" />
-     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@300&display=swap" rel="stylesheet">
+    <script src="java.js"></script>
 
 
   <!-- this is where my meta-info lives, but won’t show up on the page itself-->
 </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
 
-    <div class="code0"><p>Qianxue Zhao</p></class>
-    <h2>*************<br>
+    <div class="name"><p>Welcome to Qianxue Zhao's site</p></div>
 <br>
 
-<div class="code">project 1 a family archive <a href="../project-1/index.html">*</a><br></div>
-<br>
-<div class="code2">project 2 "what are the missing parts?"<a href="../project-2/3.html">*</a><br></div>
-<br></h2>
+<div class="code"><h2>project 1 a family archive<a href="../project-1/index.html">*</a></h2></div>
+<div class="code2"><h2>project 2 "what are the missing parts?"<a href="../project-2/3.html">*</a><br></h2></div>
 <br>
 
 
-<h3 class="ex"><br>
-<div class="code4">exercise 1 <a href="#">*</a><br></div>
-
-<div class="code5">exercise 2 <a href="../lettercomposition/type.html">*</a><br></h3></div>
 <br>
+<div class="code4"><h2>exercise 1 <a href="../lettercomposition/type.html">*</a></h2></div>
+<br>
+
+<div class="code5"><h2>exercise 2 <a href="../lettercomposition/type.html">*</a></h2></div>
 <br>
 <div class="code3"><h1>If you have any questions please send me an email <br>
 to qzhao01@ <a href="#"></a>. </h1></div>
@@ -38,9 +36,9 @@ to qzhao01@ <a href="#"></a>. </h1></div>
 
 
 
-    <nav class="dms">
-  </nav>
-
-  </section>
+  <div id="mydiv">
+  <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+    <img class="lz" src="image/eye.png" width="100px ">
+</div></div>
 </body>
 </html>
