--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+<style>
+#my {
+  position: absolute;
+  z-index: 9;
+  text-align: center;
+  top:300px;
+  left:600px;
+    border:none;s
+}
+
+
+</style>
 <head>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -14,6 +26,7 @@
   <!-- this is where my meta-info lives, but won’t show up on the page itself-->
 </head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script src="java.js"></script>
 <body>
 
     <div class="name"><p>Welcome to Qianxue Zhao's site</p></div>
@@ -35,10 +48,54 @@ to qzhao01@ <a href="#"></a>. </h1></div>
 
 
 
+<div id="my">
+  <div id="mydivheader"><img class="lz" src="image/eye.png" width="300px "></div>
 
-  <div id="mydiv">
-  <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-    <img class="lz" src="image/eye.png" width="100px ">
-</div></div>
+</div>
+<script>
+//Make the DIV element draggagle:
+dragElement(document.getElementById("my"));
+
+function dragElement(elmnt) {
+  var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+  if (document.getElementById(elmnt.id + "header")) {
+    /* if present, the header is where you move the DIV from:*/
+    document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+  } else {
+    /* otherwise, move the DIV from anywhere inside the DIV:*/
+    elmnt.onmousedown = dragMouseDown;
+  }
+
+  function dragMouseDown(e) {
+    e = e || window.event;
+    e.preventDefault();
+    // get the mouse cursor position at startup:
+    pos3 = e.clientX;
+    pos4 = e.clientY;
+    document.onmouseup = closeDragElement;
+    // call a function whenever the cursor moves:
+    document.onmousemove = elementDrag;
+  }
+
+  function elementDrag(e) {
+    e = e || window.event;
+    e.preventDefault();
+    // calculate the new cursor position:
+    pos1 = pos3 - e.clientX;
+    pos2 = pos4 - e.clientY;
+    pos3 = e.clientX;
+    pos4 = e.clientY;
+    // set the element's new position:
+    elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+    elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+  }
+
+  function closeDragElement() {
+    /* stop moving when mouse button is released:*/
+    document.onmouseup = null;
+    document.onmousemove = null;
+  }
+}
+</script>
 </body>
 </html>
