--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   position: absolute;
   z-index: 9;
   text-align: center;
-  top:90px;
+  top:115px;
   left:610px;
     border:none;s
 }
@@ -14,7 +14,7 @@
   position: absolute;
   z-index: 9;
   text-align: center;
-  top:400px;
+  top:420px;
   left:800px;
     border:none;
 }
@@ -23,7 +23,7 @@
   position: absolute;
   z-index: 9;
   text-align: center;
-  top:400px;
+  top:425px;
   left:750px;
     border:none;
 }
@@ -32,7 +32,7 @@
   position: absolute;
   z-index: 9;
   text-align: center;
-  top:470px;
+  top:495px;
   left:690px;
     border:none;
 }
@@ -41,7 +41,7 @@
   position: absolute;
   z-index: 9;
   text-align: center;
-  top:450px;
+  top:475px;
   left:690px;
   border:none;
 }
@@ -51,6 +51,7 @@ div.marquee {
     overflow:hidden;
     font-size: 30px;
     color:blue;
+    margin-top: -60px;
 }
 div.marquee > div.marquee-text {
     white-space:nowrap;
@@ -85,9 +86,9 @@ div.marquee > div.marquee-text {
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-      <audio controls>
+      <audio class="music" controls>
       <source src="horse.ogg" type="audio/ogg">
-        <source src="horse.mp3" type="audio/mpeg">
+        <source src="image/suoluohe.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
         </audio>
 
@@ -104,20 +105,19 @@ div.marquee > div.marquee-text {
       <script src="java.js"></script>
 <body>
 
-      <button onclick="myFunction()"><h3>1</h3></button>
 
 <div id="x1">
 
 
 
     <div class="name"><p>Welcome to Qianxue Zhao's "desktop" (2021)</p></div>
-    <br>
+    <br><br>
 
     <div class="code"><h2>project 1 a family archive<a href="../project-1/index.html">*</a></h2></div>
     <div class="code2"><h2>project 2 "what are the missing parts?"<a href="../project-2/3.html">*</a><br></h2></div>
     <br>
 
-    <br>
+    <br><br><br><br>
     <div class="code4"><h2>exercise 1 <a href="../lettercomposition/type.html">*</a></h2></div>
     <br>
 
@@ -126,6 +126,7 @@ div.marquee > div.marquee-text {
     <div class="code6"><h3>"drag me" <a href="#"></a></h3></div>
 
     <div class="code3"><h1>If you have any questions please send me an email <br>qzhao01@ <a href="#"></a>. </h1></div>
+      <a id=button class="click" onclick="myFunction()"><h3 style="margin-top: 0px; margin-left:1550px; font-size:35px;">1</h3></a>
 
 
 
@@ -152,7 +153,7 @@ div.marquee > div.marquee-text {
 <script>
 
 function myFunction() {
-   document.getElementById("x1").style.backgroundImage = "url(image/m3.png)";
+   document.getElementById("x1").style.backgroundImage = "url(image/m2.png)";
 }
 //Make the DIV element draggagle:
 dragElement(document.getElementById("my"));
