--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ div.marquee > div.marquee-text {
 
 
 <head>
-
+      <link rel="shortcut icon" href="image/girl2.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -83,15 +83,15 @@ div.marquee > div.marquee-text {
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,700&display=swap" rel="stylesheet">
     <script src="java.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-      <audio class="music" controls>
-      <source src="horse.ogg" type="audio/ogg">
-        <source src="image/suoluohe.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-        </audio>
 
+
+    <audio class="music" controls>
+          <source src="horse.ogg" type="audio/ogg">
+            <source src="image/suoluohe.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
     <div class='marquee'>
     <div class='marquee-text'>
       Panda, little girl, Zoom screen, capitalistic nightmares, and the neon god...
@@ -110,15 +110,16 @@ div.marquee > div.marquee-text {
 
 
 
-    <div class="name"><p>Welcome to Qianxue Zhao's "desktop" (2021)</p></div>
+    <div class="name"><p>Welcome to Qianxue's "desktop" (2021)</p></div>
     <br><br>
 
     <div class="code"><h2>project 1 a family archive<a href="../project-1/index.html">*</a></h2></div>
-    <div class="code2"><h2>project 2 "what are the missing parts?"<a href="../project-2/3.html">*</a><br></h2></div>
+    <div class="code2"><h2>project 2 variable font: newci<a href="../project-2/index.html">*</a><br></h2></div>
+    <div class="code7"><h2>project 3 our "shared reality"<a href="../project-2/sharedreality.html">*</a><br></h2></div>
     <br>
 
     <br><br><br><br>
-    <div class="code4"><h2>exercise 1 <a href="../lettercomposition/type.html">*</a></h2></div>
+    <div class="code4"><h2>exercise 1 <a href="exercise1.html">*</a></h2></div>
     <br>
 
     <div class="code5"><h2>exercise 2 <a href="../lettercomposition/type.html">*</a></h2></div>
