--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ div.marquee > div.marquee-text {
 
     <audio class="music" controls>
           <source src="horse.ogg" type="audio/ogg">
-            <source src="image/suoluohe.mp3" type="audio/mpeg">
+            <source src="image/noword.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
     <div class='marquee'>
@@ -154,7 +154,7 @@ div.marquee > div.marquee-text {
 <script>
 
 function myFunction() {
-   document.getElementById("x1").style.backgroundImage = "url(image/m2.png)";
+   document.getElementById("x1").style.backgroundImage = "url(image/bk1.png)";
 }
 //Make the DIV element draggagle:
 dragElement(document.getElementById("my"));
