--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ div.marquee > div.marquee-text {
 
     <div class="name"><p>Welcome to Qianxue's "desktop" (2021)</p></div>
     <br><br>
-
+<section class="all">
     <div class="code"><h2>project 1 a family archive<a href="../project-1/index.html">*</a></h2></div>
     <div class="code2"><h2>project 2 variable font: newci<a href="../project-2/index.html">*</a><br></h2></div>
     <div class="code7"><h2>project 3 our "shared reality"<a href="../project-2/3.html">*</a><br></h2></div>
@@ -130,7 +130,7 @@ div.marquee > div.marquee-text {
 
     <div class="code3"><h1>If you have any questions please send me an email <br>qzhao01@ <a href="#"></a>. </h1></div>
       <a id=button class="click" onclick="myFunction()"><h3 style="margin-top: 0px; margin-left:1550px; font-size:35px;">1</h3></a>
-
+</section>
 
 
 <div id="my">
@@ -138,18 +138,18 @@ div.marquee > div.marquee-text {
 </div></div>
 
 <div id="my2">
-  <div id="mydivheader"><img class="lz" src="image/3.png" width="300px ">
+  <div class="mydivheader"><img class="lz" src="image/3.png" width="300px ">
 </div></div>
 
 <div id="my3">
-  <div id="mydivheader"><img class="lz" src="image/1.2.png" width="200px ">
+  <div class="mydivheader"><img class="lz" src="image/1.2.png" width="200px ">
 </div></div>
 
 <div id="my4">
-  <div id="mydivheader"><img class="lz" src="image/7.png" width="300px ">
+  <div class="mydivheader"><img class="lz" src="image/7.png" width="300px ">
 </div></div>
 <div id="my5">
-  <div id="mydivheader"><img class="lz" src="image/6.png" width="300px ">
+  <div class="mydivheader"><img class="lz" src="image/6.png" width="300px ">
 </div></div>
 
 </div>
