--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ div.marquee > div.marquee-text {
 <section class="all">
     <div class="code"><h2>project 1 a family archive<a href="../project-1/index.html">*</a></h2></div>
     <div class="code2"><h2>project 2 variable font: newci<a href="../project-2/index.html">*</a><br></h2></div>
-    <div class="code7"><h2>project 3 our "shared reality"<a href="../project-2/3.html">*</a><br></h2></div>
+    <div class="code7"><h2>project 3 our "shared reality"<a href="../project-2/sharedreality.html">*</a><br></h2></div>
 
     <br>
       <div class="code9"><h3>presentation<a href="https://docs.google.com/presentation/d/1iYY9H3wVqYSqxeCYSY8pTPtRQxRKHM3psA1W592w-kE/edit#slide=id.gd64b064030_4_22">*</a><br></h3></div>
