--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   text-align: center;
   top:115px;
   left:610px;
-    border:none;s
+    border:none;
 }
 
 #my2 {
@@ -114,7 +114,7 @@ div.marquee > div.marquee-text {
     <br><br>
 <section class="all">
     <div class="code"><h2>project 1 a family archive<a href="../project-1/index.html">*</a></h2></div>
-    <div class="code2"><h2>project 2 variable font: newci<a href="../project-2/index.html">*</a><br></h2></div>
+    <div class="code2"><h2>project 2 variable font: newci<a href="../project-2/3.html">*</a><br></h2></div>
     <div class="code7"><h2>project 3 our "shared reality"<a href="../project-2/sharedreality.html">*</a><br></h2></div>
 
     <br>
