--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ div.marquee > div.marquee-text {
     <div class="code4"><h2>exercise 1 <a href="exercise1.html">*</a></h2></div>
     <br>
 
-    <div class="code5"><h2>exercise 2 <a href="../lettercomposition/type.html">*</a></h2></div>
+    <div class="code5"><h2>exercise 2 <a href="type.html">*</a></h2></div>
     <br>
     <div class="code6"><h3>"drag me" <a href="#"></a></h3></div>
 
