--- a/type.html
+++ b/type.html
@@ -40,7 +40,7 @@ onclick="setColor(event, 'button', '#101010')"; data-count="1" />
 style="color:white" width="100px"   border-radius: 50%; border:none display:inline-block
 onclick="setse(event, 'button', '#101010')"; data-count="1" />
 
-<input type="button" id="button" value="" class="d"
+<input type="button" id="button" value="" class="dd"
 style="color:white" width="100px"   border-radius: 50%; border:none display:inline-block type-color: black
 onclick="setColor(event, 'button', '#101010')"; data-count="1" />
 
@@ -1058,7 +1058,7 @@ onclick="setColor(event, 'button', '#101010')"; data-count="1" />
 style="color:white" width="100px"   border-radius: 50%; border:none display:inline-block
 onclick="setColor(event, 'button', '#101010')"; data-count="1" />
 
-<input type="button" id="button" value="" class="d"
+<input type="button" id="button" value="" class="dd"
 style="color:white" width="100px"   border-radius: 50%; border:none display:inline-block
 onclick="setColor(event, 'button', '#101010')"; data-count="1" />
 
